Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
Class.newInstance() has been deprecated since Java 9: it propagates any
exception thrown by the nullary constructor as if it were unchecked
(bypassing normal Java exception-checking), and it performs Class and
constructor access checks even for a constructor whose declaring class
lacks a nullary constructor's usual visibility guarantees. The
replacement, getDeclaredConstructor().newInstance(), enforces the
constructor's declared exceptions normally.

- WebSocketHandlerClassWrapper.getHandler() now catches
  ReflectiveOperationException (the common supertype of
  InstantiationException, IllegalAccessException,
  NoSuchMethodException, and InvocationTargetException, the last two
  of which getDeclaredConstructor().newInstance() can additionally
  throw) instead of listing the two exceptions individually.
- SparkFilter.getApplication(String) already caught generic Exception,
  so no catch-block change was needed there.

Verified via mvn test-compile -Dmaven.compiler.showDeprecation=true
that both warnings are gone, and the full test suite (361 tests)
still passes.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>